# Digital-Image-Processing-Course-Project

./: README.md  index.html  package.json
src/: App.css  App.jsx  EditHistory.jsx  FileExplorer.jsx  History.jsx  Icons.jsx  PopupMenu.jsx  Previewer.jsx  TransformDialog.jsx  utils.jsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: folder.rs  image.rs  main.rs  menu.rs
src-tauri/src/transform/: binary_op.rs  binary_op_transform.rs  color.rs  color_transform.rs  fft.rs  filter.rs  filter_transform.rs  fourier_desc.rs  geometic_transform.rs  geometric.rs  mod.rs  utils.rs
src/contexts/: FileInfoContext.jsx  TabsLayoutContext.jsx
src/style/: App.css  Previewer.css  Treeview.css  index.css
